feat: cambios por evento qr.

--- a/src/main/resources/templates/email-template.html
+++ b/src/main/resources/templates/email-template.html
@@ -545,25 +545,21 @@
                                                     &nbsp;
                                                 </p>
                                                 <p style="font-size: 14px; line-height: 140%">
-                                    <span
-                                            style="
+                                    <span style="
                                         font-family: 'Lato', sans-serif;
                                         font-size: 18px;
                                         line-height: 25.2px;
                                         color: #34495e;
-                                      "
-                                    th:text="${message}"></span
-                                    >
+                                      " th:text="${message}"></span>
                                                 </p>
                                                 <p style="font-size: 14px; line-height: 140%">
-                                                    <br /><span
-                                                        style="
+                                                <br>
+                                                    <span style="
                                         font-family: 'Lato', sans-serif;
                                         font-size: 18px;
                                         line-height: 25.2px;
                                         color: #34495e;
-                                      ">Para ingresar al sitio,
-                                      por favor siga el siguiente enlace:</span>
+                                      ">Para ingresar al sitio, por favor siga el siguiente enlace:</span>
                                                 </p>
                                             </div>
                                         </td>
@@ -676,7 +672,7 @@
                                             font-size: 16px;
                                             line-height: 22.4px;
                                           "
-                                    >La finalidad exclusiva de este correo electrónico es la notificación al cliente.</span
+                                    >El único propósito de este correo electrónico es para notificarte.</span
                                     ></em
                                     ></span
                                     ><br /><span
